--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,8 @@
 platform = teensy
 board = teensy31
 framework = arduino
+
+[env:teensy30]
+platform = teensy
+board = teensy30
+framework = arduino
