feat: move to vscode extension

--- a/platformio.ini
+++ b/platformio.ini
@@ -6,14 +6,12 @@
 ;   Advanced options: extra scripting
 ;
 ; Please visit documentation for the other options and examples
-; http://docs.platformio.org/page/projectconf.html
+; https://docs.platformio.org/page/projectconf.html
 
 [env:teensy31]
 platform = teensy
 board = teensy31
 framework = arduino
 
-[env:teensy30]
-platform = teensy
-board = teensy30
-framework = arduino
+[platformio]
+description = Ctrl
